<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:gravity="center_horizontal"
		        android:paddingBottom="4dp"
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:paddingTop="4dp"
		        android:text="@string/app_description"
		        android:textSize="@dimen/textSize" />
    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:gravity="center_vertical|center_horizontal"
	            android:padding="4dp"
	            android:text="Application designed and developed by"
	            android:textSize="@dimen/textSize" />

		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:gravity="center_vertical|center_horizontal"
		        android:padding="4dp"
		        android:text="@string/app_by"
		        android:textSize="@dimen/textSize" />
		
		    <Button
		        android:id="@+id/btnEmailDev"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:padding="8dp"
		        android:text="Email Developer"
		        android:onClick="emailDeveloper"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:textSize="@dimen/textSize" />

		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_margin="30dp"
		        android:orientation="vertical" >
		
		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Credits:"
		            android:textSize="@dimen/smallSize" />
		
		        <TextView
		            android:id="@+id/textView3"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/fuque"
		            android:textSize="@dimen/smallSize" />
		
		        <TextView
		            android:id="@+id/textView4"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/swanage"
		            android:textSize="@dimen/smallSize" />     
		            
		        <TextView
		            android:id="@+id/textView5"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/version"
		            android:textSize="@dimen/smallSize" />  		
		    </LinearLayout>
		    
    	</LinearLayout>
    </ScrollView>
