<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:weightSum="12" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Date"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Time"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:text="22/12/2013"
            android:visibility="invisible" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/blank" />

    <TextView
        android:id="@+id/txtClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="4dp"
        android:text="@string/Club"
        android:textSize="@dimen/textSize" />

</LinearLayout>