<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:weightSum="4" >

    <TextView
        android:id="@+id/txtYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="36dp"
        android:minWidth="56dp"
        android:padding="4dp"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/textSize" />
 
    <ImageButton
        android:id="@+id/standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:contentDescription="@string/standard"
        android:gravity="center_vertical|center_horizontal"
        android:padding="4dp"
        android:src="@drawable/laser" />

    <ImageButton
        android:id="@+id/radial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@color/green"
        android:contentDescription="@string/radial"
        android:gravity="center_vertical|center_horizontal"
        android:padding="4dp"
        android:src="@drawable/laserradial" />

    <ImageButton
        android:id="@+id/fourpointseven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:background="@color/yellow"
        android:contentDescription="@string/laser4p7"
        android:gravity="center_vertical|center_horizontal"
        android:padding="4dp"
        android:src="@drawable/laser4p7" />

</LinearLayout>